Layout bugfix caused by loadingData wrapper component

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,9 @@
     flex-grow: 1;
   }
 }
-
+.pageContent {
+  width: 100%;
+}
 .rdt {
   position: relative;
 }
